[gd_scene load_steps=2 format=3 uid="uid://cgltm5158yvxb"]

[ext_resource type="Script" path="res://scenes/ally_characters/mount_points.gd" id="1_6b1k3"]

[node name="MountPoints" type="Node2D"]
script = ExtResource("1_6b1k3")

[node name="MountPointUp" type="Node2D" parent="."]
z_index = -1
position = Vector2(5, -12)

[node name="MountPointLeft" type="Node2D" parent="."]
z_index = -1
position = Vector2(0, -12)

[node name="MountPointDown" type="Node2D" parent="."]
position = Vector2(-5, -8)

[node name="MountPointRight" type="Node2D" parent="."]
position = Vector2(0, -8)
